# flaresim_nuke

./: CMakeLists.txt  FlareSim_LensBrowser.py  LICENSE  README.md  build_all.ps1  flaresim.nk  menu.py  package_release.ps1
LINUX/: CMakeLists.txt  building_step_by_step.txt
MAC/: CMakeLists.txt  building_step_by_step.txt
MAC/15.0v8/: FlareSim.dylib  FlareSim3D.dylib
MAC/15.1v10/: FlareSim.dylib  FlareSim3D.dylib
MAC/15.2v6/: FlareSim.dylib  FlareSim3D.dylib
MAC/16.0v6/: FlareSim.dylib  FlareSim3D.dylib
MAC/16.1v1/: FlareSim.dylib  FlareSim3D.dylib
MAC/17.0v1/: FlareSim.dylib  FlareSim3D.dylib
MAC/src/: FlareSim.mm  FlareSim3D.mm  flare_shaders.metal  ghost_metal.h  ghost_metal.mm  trace.h
MAC/src_old/: FlareSim.mm  flare_shaders.metal  ghost_metal.h
SteveWattsKennedy_Files_290326/: .gitignore  CMakeLists.txt  INSTALL.md  README.md  build_all.ps1  build_all.sh  menu.py  package_release.sh
WIN/: CMakeLists.txt  building_step_by_step_windows.txt
WIN/src/: FlareSim.cpp  FlareSim3D.cpp  blur_cuda.cu  ghost_cuda.cu  lens.cpp  lens.h  profiler.h  smoke.cpp
WIN/src_old/: FlareSim3D.cpp
lenses/: Anamorphic_Test_50mm_2x.lens  Anamorphic_Test_50mm_2x_toric.lens  all_lenses.bat  convert_ob.py
lenses/lens_files/: 100mm_F10_(Ross_F10_APO_Process_Xpres).lens  69.88mm_F8_(GOI_Russar-22).lens  7Artisans_25mm_F0.95_(7Artisans_APS-C_25mm_F0.95).lens  7Artisans_50mm_F0.95_(7Artisans_APS-C_50mm_F0.95).lens  AF-S_DX_Zoom-Nikkor_12-24mm_F4G_IF-ED.lens  AF_Nikkor_85mm_F1.4D_IF.lens  AF_Zoom-Micro_Nikkor_70-180mm_F4.5-5.6D_ED.lens  AI_AF-S_Zoom-Nikkor_80-200mm_F2.8D_IF-ED.lens  AI_AF_Fisheye-Nikkor_16mm_F2.8D.lens  AI_AF_Micro-Nikkor_60mm_F2.8S.lens  AI_AF_Nikkor_24-120mm_F3.5-5.6D.lens  AI_Nikkor_135mm_F2.lens  AI_Nikkor_180mm_F2.8_ED.lens  AI_Nikkor_200mm_F2S_IF-ED.lens  AI_Nikkor_28mm_F1.4D.lens  AI_Nikkor_35mm_F1.4S.lens  AI_Nikkor_50mm_F1.2S.lens  AI_Zoom_Nikkor_25-50mm_F4.lens  AI_Zoom_Nikkor_35-200mm_F3.5-4.5S.lens  Agfa_50mm_F2_(Agfa_Solagon_50mm_F2).lens  Agfa_60mm_F4.5_(Agfa_Color-Magnolar_II_100mm_F4.5).lens  Agfa_90mm_F4_(Agfa_Color_Telinear_90mm_F4).lens  Angenieux_180mm_F2.3_(Angenieux_DEM_180mm_F2.3_APO).lens  Angenieux_28mm_F3.5_(Angenieux_28mm_f3.5_R11).lens  Angenieux_35mm_f2.5_(Angenieux_35mm_f2.5_R1).lens  Arri_35mm_F1.2_(Arriflex_Distagon_35mm_f1.2_T1.3).lens  AstrHori_40mm_F5.6_(AstrHori_40mm_F5.6_Full_Frame).lens  Canon_1.4x_TC_(Canon_Extender_EF1.4X).lens  Canon_1.4x_TC_(Canon_Extender_EF1.4X_III).lens  Canon_1.4x_TC_(Canon_Extender_RF1.4X).lens  Canon_10-17mm_F4.64-5.71_(Canon_EF-S10-18mm_f4.5-5.6_IS_STM).lens  Canon_10-19mm_F4.08-4.12_IF_OS_(Canon_RF10-20mm_F4_L_IS_STM).lens  Canon_10-21mm_F3.5-4.6_(Canon_EF-S10-22mm_f3.5-4.5_USM).lens  Canon_100-300mm_F5.6_(Canon_EF100-300mm_f5.6).lens  Canon_100-388mm_F5.77-8.24_(Canon_RF100-400mm_F5.6-8_IS_USM).lens  Canon_100mm_F2.89_macro_(Canon_EF100mm_f2.8_Macro).lens  Canon_100mm_F2.92_IF_os_macro_(Canon_EF100mm_f2.8L_Macro_IS_USM).lens  Canon_100mm_F2.92_macro_(Canon_RF100mm_F2.8_L_Macro_IS_USM).lens  Canon_100mm_F2.9_OS_macro.lens  Canon_100mm_F2_(Canon_New_FD100mm_f2).lens  (+1324 more)
src/: FlareSim.cpp  FlareSim3D.cpp  flaresim.conf  ghost.cpp  ghost_cuda.cu  ghost_cuda.h  starburst.h  trace.cpp
src_old/: FlareSim.cpp  ghost.h  ghost_cuda.cu  ghost_cuda.h  starburst.cpp
src_v1.1/: FlareSim.cpp  FlareSim3D.cpp  blur_cuda.h  ghost.h  lens.cpp
